Fix inconsistent text alignment in header

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -23,6 +23,7 @@
   padding: 20px 20px;
   /* color: black; */
   text-decoration: none;
+  text-align: center;
 }
 
 .header li a:hover,
